--- a/src/app/shopping/inicio/inicio.component.html
+++ b/src/app/shopping/inicio/inicio.component.html
@@ -1,14 +1,15 @@
 <div class="row text-center">
-  <h1>Bienvenido a la tienda NG-Angular</h1>
+  <h1>Tienda Forestal</h1>
 </div>
 <hr>
 
 <div class="row">
   <div class="col-md-12 text-center">
       <div class="card">
-          <img src="https://scottleroymarketing.com/wp-content/uploads/2016/06/Hiring-a-good-logo-designing-company-to-create-your-logo-1.jpeg" class="card-img-top">
+          <!-- <img src="https://scottleroymarketing.com/wp-content/uploads/2016/06/Hiring-a-good-logo-designing-company-to-create-your-logo-1.jpeg" class="card-img-top">-->
+          <img src="assets/images/Forestal.jpg" class="card-img-top">
           <div class="card-body">
-           <h5 class="card-title">Curso Angular</h5>
+           <h5 class="card-title">Café Forestal</h5>
             <p class="card-text">Bienvenidos....</p>
           </div>
         </div>
