--- a/src/app/shopping/navbar/navbar.component.html
+++ b/src/app/shopping/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary mb-5">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">NG-Shop</a>
+    <a class="navbar-brand" href="#">Forestal-Menu</a>
     <button
       class="navbar-toggler"
       type="button"
