--- a/src/app/shopping/navbar/navbar.component.html
+++ b/src/app/shopping/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary mb-5">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Forestal-Menu</a>
+    <a class="navbar-brand" href="#">Forestal-Shop</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -18,10 +18,19 @@
           class="nav-link"
           *ngFor="let navItem of navItems; let i = index"
           [ngClass]="{ active: navItem.active, disabled: navItem.disabled }"
-          (click)="cambiarMenu(navItem.id)"
+          [routerLink]="navItem.link"
         >
+        <!-- <a
+        class="nav-link"
+        *ngFor="let navItem of navItems; let i = index"
+        [ngClass]="{ active: navItem.active, disabled: navItem.disabled }"
+        (click)="cambiarMenu(navItem.link)"
+        > -->
+        <!-- (click)="cambiarMenu(navItem.id)" -->
           {{ navItem.nombre }}
         </a>
+        <!-- [routerLink] -->
+        <!-- <a class="nav-link" [routerLink]="'inicio/'">Botton Ejemplo</a> -->
       </div>
     </div>
   </div>
