--- a/src/app/shopping/nosotros/nosotros.component.html
+++ b/src/app/shopping/nosotros/nosotros.component.html
@@ -5,17 +5,27 @@
 <div class="row">
   <div class="col-md-12">
     <p>
-      Somos un grupo de entusiastas y aprendices del desarrollo web,
-      especialmente interesados en el uso de Angular y TypeScript. Hasta ahora,
-      hemos adquirido conocimientos sólidos en varios aspectos de Angular,
-      incluyendo:
+      Forestal venera los bosques que crean las condiciones óptimas para el desarrollo natural del café. Somos micro tostadores y caficultores, colombianos y santandereanos, artesanos del café. Buscamos los mejores granos para transformarlos en historias contadas al ritmo de aromas y sabores.
     </p>
-    <ul>
+    Somos anfitriones de los cafés especiales de Santander, cafés de carácter, cultivados bajo la sombra del bosque tropical por los pioneros del café de Colombia, a través de procesos de recolección y post cosecha diferenciados, para aquellos amantes y conocedores del buen café que buscan emociones y sensaciones ofrecidas por una taza limpia y balanceada.
+
+    <p>
+       Evocan lugares exóticos pintados por las impresiones de un producto privilegiado en el que predominan notas desde el chocolate y caramelo hasta herbales y frutales, definidas con gran cuerpo y un sabor inolvidable.
+    </p>
+
+
+    <p>
+      Los cafés especiales de Santander brindan una explosión eufórica de aromas y sabores caracterizados por su diversidad y por ser cultivados de forma sostenible con tesón, en montañas con fuentes hídricas y microlimas únicos para el mercado de cafés especiales del mundo.» (Cluster de cafés de Santander)
+
+
+
+    </p>
+    <!-- <ul>
         <li>Componentes: Entendemos que los componentes son bloques de construcción fundamentales en las aplicaciones Angular, y hemos aprendido sobre la interpolación, data binding, event binding y two-way binding.</li>
         <li>    Directivas: Hemos estudiado las directivas estructurales y de atributos en Angular, y también hemos aprendido a crear nuestras propias directivas personalizadas.</li>
         <li>    Ciclos de vida de los componentes: Hemos explorado los ciclos de vida de los componentes en Angular y cómo utilizar diferentes "hooks" del ciclo de vida para controlar y mejorar el comportamiento de nuestros componentes.</li>
         <li>    Referencias locales: Hemos aprendido sobre las referencias locales en Angular y cómo utilizarlas para acceder a elementos del DOM, componentes y directivas directamente desde las plantillas.</li>
         <li>    Comunicación entre componentes: Hemos adquirido conocimientos sobre cómo utilizar el enlace de propiedades (property binding) y el enlace de eventos (event binding) para lograr una comunicación efectiva entre componentes en Angular.</li>
-    </ul>
+    </ul> -->
   </div>
 </div>
