--- a/src/app/shopping/navbar/navbar.component.html
+++ b/src/app/shopping/navbar/navbar.component.html
@@ -17,8 +17,10 @@
         <a
           class="nav-link"
           *ngFor="let navItem of navItems; let i = index"
-          [ngClass]="{ active: navItem.active, disabled: navItem.disabled }"
+          [ngClass]="{  disabled: navItem.disabled }"
+          [routerLinkActive]="'active'"
           [routerLink]="navItem.link"
+
         >
         <!-- <a
         class="nav-link"
