--- a/src/app/shopping/tienda/tarjeta/tarjeta.component.html
+++ b/src/app/shopping/tienda/tarjeta/tarjeta.component.html
@@ -1,9 +1,8 @@
 
-  <div class="card mb-3" >
+  <!-- <div class="card mb-3" >
     <div class="row g-0">
       <div class="col-md-4">
-        <!-- <img src="https://fastly.4sqi.net/img/general/600x600/398961212_JT8UPQLoBAJ21T01XX1wwfscJO7F5cJIlQlJDcbai6U.jpg"class="img-fluid rounded-start" alt="..."> -->
-        <img src= {{prodTarjeta.image}} class="img-fluid rounded-start" alt="...">
+        <img [src]= "prodTarjeta.image" class="img-fluid rounded-start" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
@@ -14,5 +13,25 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
+
+  <div class="card mb-3" >
+    <div class="row g-0">
+      <div class="col-md-4">
+
+        <!-- <img [src]= "prodTarjetaPos.image" class="img-fluid rounded-start" alt="..."> -->
+
+        <img src= "https://media-cdn.tripadvisor.com/media/photo-s/0f/4f/a2/44/rico-y-fresco-cafe-acompanado.jpg" class="img-fluid rounded-start" alt="...">
+
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title"> {{prodTarjetaPos.title}}</h5>
+          <p class="card-text">{{prodTarjetaPos.description}}</p>
+          <p class="card-text"><small class="text-body-secondary">${{prodTarjetaPos.price}}</small></p>
+          <a href="#" class="btn btn-primary">🛒</a>
+        </div>
+      </div>
+    </div>
+  </div>
