--- a/src/app/shopping/tienda/tarjeta/tarjeta.component.html
+++ b/src/app/shopping/tienda/tarjeta/tarjeta.component.html
@@ -1,5 +1,5 @@
 
-  <!-- <div class="card mb-3" >
+  <div class="card mb-3" >
     <div class="row g-0">
       <div class="col-md-4">
         <img [src]= "prodTarjeta.image" class="img-fluid rounded-start" alt="...">
@@ -13,14 +13,14 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
 
-  <div class="card mb-3" >
+   <!--<div class="card mb-3" >
     <div class="row g-0">
       <div class="col-md-4">
 
-        <!-- <img [src]= "prodTarjetaPos.image" class="img-fluid rounded-start" alt="..."> -->
+         <img [src]= "prodTarjetaPos.image" class="img-fluid rounded-start" alt="...">
 
         <img src= "https://media-cdn.tripadvisor.com/media/photo-s/0f/4f/a2/44/rico-y-fresco-cafe-acompanado.jpg" class="img-fluid rounded-start" alt="...">
 
@@ -34,4 +34,4 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
