--- a/src/app/shopping/tienda/tienda.component.html
+++ b/src/app/shopping/tienda/tienda.component.html
@@ -1,24 +1,59 @@
 
-
-<div class="row">
-  <div class="col-md-3">
-    <h1>Filtro de Busqueda</h1>
-  </div>
-
-
-  <div class="col-md-9">
-
-    <div class="row" *ngFor="let prod  of productosArray;let i = index">
-     <app-tarjeta [prodTarjeta]="prod"></app-tarjeta>
-     <!-- <app-tarjeta [prodTarjetaPos]="prod"></app-tarjeta> -->
-    </div>
-
-
-
-
-
-
-
-  </div>
+<div class="row text-center">
+  <h1>Tienda</h1>
 </div>
 
+ <div class="row">
+  <div class="col-md-3">
+    <button class="btn btn-success w-100" [routerLink]="'/producto'">Añadir +</button>
+    <button class="btn  w-100 mb-3" (click)="mostrarFiltro = !mostrarFiltro" [ngClass]="{'btn-info': !mostrarFiltro , 'btn-outline-info':mostrarFiltro}">
+      {{mostrarFiltro? 'Ocultar Filtros' : 'Activar Filtros'}}
+    </button>
+    <ng-container *ngIf="mostrarFiltro">
+    <hr>
+    <h1>Filtros</h1>
+    <!-- <div class="row"> -->
+      <div class="row mb-3">
+        <label for="limitante" class="form-label">Limitante</label>
+         <input
+          type="text"
+          [(ngModel)]="limite"
+          name="limite"
+          class="form-control"
+          id="limitante"
+        />
+      </div>
+      <div class="row mb-3">
+        <label for="categorias">Categorias:</label>
+        <select [(ngModel)]="filtroCategoria" id="categorias" class="form-select">
+          <option selected [value]="''">- Seleciones Una Categoria -</option>
+          <option *ngFor="let categoria of categorias" [value]="categoria">{{categoria}}</option>
+        </select>
+      </div>
+      <div class="row mb-3">
+        <button class="btn btn-info" (click)="buscarFiltrado()">Filtrar</button>
+      </div>
+    </ng-container>
+    </div>
+
+    <div class="col-md-9">
+      <div class="row" *ngFor="let prod of productosArray; let i = index">
+        <app-tarjeta [prodTarjeta]="prod" (refrescar)="buscarFiltrado()"></app-tarjeta>
+      </div>
+    </div>
+
+  </div>
+
+
+
+
+<!--
+  <div class="col-md-9">
+    <div class="row" *ngFor="let prod  of productosArray;let i = index">
+      <app-tarjeta [prodTarjeta]="prod"></app-tarjeta>
+    </div>
+  </div>
+</div> -->
+
+
+<!-- <app-tarjeta [prodTarjetaPos]="prod"></app-tarjeta> -->
